--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_oscclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_oscclusters.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.1-0.20220825130208-40db49591af1
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.13.1-0.20231113150709-881ffb4682cb
   name: oscclusters.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -111,6 +110,11 @@ spec:
                   clusterName:
                     description: The name of the cluster
                     type: string
+                  controlPlaneSubnets:
+                    description: List of subnet to spread controlPlane nodes
+                    items:
+                      type: string
+                    type: array
                   image:
                     description: The image configuration
                     properties:
@@ -432,6 +436,25 @@ spec:
                   - type
                   type: object
                 type: array
+              failureDomains:
+                additionalProperties:
+                  description: FailureDomainSpec is the Schema for Cluster API failure
+                    domains. It allows controllers to understand how many failure
+                    domains a cluster can optionally span across.
+                  properties:
+                    attributes:
+                      additionalProperties:
+                        type: string
+                      description: Attributes is a free form map of attributes an
+                        infrastructure provider might use or require.
+                      type: object
+                    controlPlane:
+                      description: ControlPlane determines if this failure domain
+                        is suitable for use by control plane machines.
+                      type: boolean
+                  type: object
+                description: FailureDomains is a slice of FailureDomains.
+                type: object
               network:
                 properties:
                   LoadbalancerRef:
