--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_oscclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_oscclustertemplates.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.1-0.20220825130208-40db49591af1
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.13.1-0.20231113150709-881ffb4682cb
   name: oscclustertemplates.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -162,6 +161,11 @@ spec:
                           clusterName:
                             description: The name of the cluster
                             type: string
+                          controlPlaneSubnets:
+                            description: List of subnet to spread controlPlane nodes
+                            items:
+                              type: string
+                            type: array
                           image:
                             description: The image configuration
                             properties:
