--- a/example/cluster-machine-template-simple.yaml
+++ b/example/cluster-machine-template-simple.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cluster-api
   namespace: default
   labels:
-    cni: "cluster-api-crs-cni"
+    cni: "calico-v3-19"
     ccm: "cluster-api-crs-ccm"
 spec:
   clusterNetwork:
@@ -87,7 +87,7 @@ spec:
             destination: "0.0.0.0/0"
     securityGroups:
       - name: cluster-api-securitygroups-kw
-        description: Security Group with cluster-api   
+        description: Security Group with cluster-api
         securityGroupRules:
           - name: cluster-api-securitygrouprule-api-kubelet-kw
             flow: Inbound
@@ -270,12 +270,12 @@ spec:
         image:
           name: ubuntu-2004-2004-kubernetes-v1.22.11-2022-08-22
         keypair:
-          name: cluster-api
+          name: cluster-api-test
           deleteKeypair: false
         vm:
           clusterName: cluster-api
           name: cluster-api-vm-kw
-          keypairName: cluster-api
+          keypairName: cluster-api-test
           deviceName: /dev/sda1
           rootDisk:
             rootDiskSize: 30
@@ -306,7 +306,7 @@ spec:
         vm:
           clusterName: cluster-api
           name: cluster-api-vm-kcp
-          keypairName: cluster-api
+          keypairName: cluster-api-test
           rootDisk:
             rootDiskSize: 30
             rootDiskIops: 1500
@@ -332,7 +332,7 @@ spec:
       files:
       - content: |
           #!/bin/sh
- 
+
           curl https://github.com/opencontainers/runc/releases/download/v1.1.1/runc.amd64 -Lo /tmp/runc.amd64
           chmod +x /tmp/runc.amd64
           cp -f /tmp/runc.amd64 /usr/local/sbin/runc
@@ -353,7 +353,7 @@ apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 metadata:
   name: "cluster-api-control-plane"
 spec:
-  replicas: 1
+  replicas: 3
   machineTemplate:
     infrastructureRef:
       kind: OscMachineTemplate
@@ -371,7 +371,7 @@ spec:
     - content: |
         #!/bin/sh
         curl https://github.com/opencontainers/runc/releases/download/v1.1.1/runc.amd64 -Lo /tmp/runc.amd64
-        chmod +x /tmp/runc.amd64	
+        chmod +x /tmp/runc.amd64
         cp -f /tmp/runc.amd64 /usr/local/sbin/runc
       owner: root:root
       path: /tmp/set_runc.sh
@@ -381,6 +381,7 @@ spec:
         kubeletExtraArgs:
           cloud-provider: external
           provider-id: aws:///'{{ ds.meta_data.placement.availability_zone }}'/'{{ ds.meta_data.instance_id }}'
+        name: '{{ ds.meta_data.local_hostname }}'
     preKubeadmCommands:
       - sh /tmp/set_runc.sh
   version: "1.22.11"
