--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_oscmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_oscmachines.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.1-0.20220825130208-40db49591af1
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.13.1-0.20231113150709-881ffb4682cb
   name: oscmachines.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -84,6 +83,8 @@ spec:
                           - privateIp
                           type: object
                         type: array
+                      publicIp:
+                        type: boolean
                       publicIpName:
                         type: string
                       replica:
@@ -237,6 +238,15 @@ spec:
                         type: object
                     type: object
                   linkPublicIpRef:
+                    description: Map between resourceId and resourceName (tag Name
+                      with cluster UID)
+                    properties:
+                      resourceMap:
+                        additionalProperties:
+                          type: string
+                        type: object
+                    type: object
+                  publicIpIdRef:
                     description: Map between resourceId and resourceName (tag Name
                       with cluster UID)
                     properties:
