--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_oscmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_oscmachinetemplates.yaml
@@ -85,12 +85,6 @@ spec:
                   spec:
                     description: OscMachineSpec defines the desired state of OscMachine
                     properties:
-                      failureDomain:
-                        description: FailureDomain is the failure domain unique identifier
-                          this Machine should be attached to, as defined in Cluster
-                          API. For this infrastructure provider, the ID is equivalent
-                          to a subnet name.
-                        type: string
                       node:
                         properties:
                           clusterName:
@@ -140,6 +134,8 @@ spec:
                                   - privateIp
                                   type: object
                                 type: array
+                              publicIp:
+                                type: boolean
                               publicIpName:
                                 type: string
                               replica:
