--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_oscmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_oscmachines.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.2
+    controller-gen.kubebuilder.io/version: v0.16.2-0.20240815091918-bfb3b75757cc
   name: oscmachines.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -84,8 +84,6 @@ spec:
                               type: string
                             privateIp:
                               type: string
-                          required:
-                          - privateIp
                           type: object
                         type: array
                       publicIp:
@@ -135,6 +133,8 @@ spec:
                   volumes:
                     items:
                       properties:
+                        device:
+                          type: string
                         iops:
                           format: int32
                           type: integer
@@ -149,6 +149,8 @@ spec:
                           type: string
                         volumeType:
                           type: string
+                      required:
+                      - device
                       type: object
                     type: array
                 type: object
